# COSE-C

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .mbedignore  .travis.yml  CMakeLists.txt  Coverity_Model.c  Doxyfile  README.md  build.sh  build_clang_tidy.sh  conanfile.py  conanfile.txt
.github/workflows/: cancel.yml  main.yml
cmake/: CoverallsGenerateGcov.cmake  FindMbedTLS.cmake  sanitizers.cmake
dump/: dump.c
dumper/: CMakeLists.txt  dumper.c  dumper.cpp
include/: configure.h  cose.h
include/cose/: cose.h  cose_configure.h  cose_configure.h.in
scripts/: build_clang_tidy.sh  format_cmake.sh  format_source.sh
src/: .#Sign.c  CMakeLists.txt  Cose.c  Cose.cpp  Cose.hpp  CoseKey.c  CoseKey.cpp  CoseKey.hpp  CounterSign.c  CounterSign.cpp  CounterSign.hpp  CounterSign0.c  CounterSign0.cpp  CounterSign1.cpp  CounterSign1.hpp  Encrypt.c  Encrypt.cpp  Encrypt0.c  Encrypt0.cpp  Enveloped.hpp  MacMessage.c  MacMessage.cpp  MacMessage.hpp  MacMessage0.c  MacMessage0.cpp  Message.c  Recipient.c  Recipient.cpp  Recipient.hpp  Sign.c  Sign.cpp  Sign.hpp  Sign0.c  Sign1.c  Sign1.cpp  Sign1.hpp  SignerInfo.c  SignerInfo.cpp  SignerInfo.hpp  bcrypt.c  (+15 more)
test/: .#CMakeLists.txt  CMakeLists.txt  CounterSign1_test.cpp  CounterSign_test.c  CounterSign_test.cpp  Encrypt_test.cpp  Mac_test.cpp  Sign_test.cpp  context.c  context.cpp  context.h  encrypt.c  json.c  json.cpp  json.h  mac_test.c  sign.c  test.c  test.cbor  test.cpp  test.h  test.sln  test.vcxproj  test.vcxproj.filters
